--- a/Smartwyre.DeveloperTest.Runner/Smartwyre.DeveloperTest.Runner.csproj
+++ b/Smartwyre.DeveloperTest.Runner/Smartwyre.DeveloperTest.Runner.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="xunit.assert" Version="2.4.1" />
   </ItemGroup>
